--- a/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
+++ b/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
@@ -69,37 +69,39 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WMO-Pt-7A5">
-                                <rect key="frame" x="29" y="163" width="356" height="362"/>
+                                <rect key="frame" x="0.0" y="163" width="414" height="362"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="362" id="fau-54-nmk"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="JqP-yD-U9D">
-                                    <size key="itemSize" width="356" height="362"/>
+                                    <size key="itemSize" width="415" height="374.5"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="apiCell" id="g34-vT-zI8" customClass="ApiCell" customModule="fieldBy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-12.5" width="356" height="387"/>
+                                        <rect key="frame" x="0.0" y="-6.5" width="415" height="374.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KP0-5b-g6v">
-                                            <rect key="frame" x="0.0" y="0.0" width="356" height="387"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="415" height="374.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="api1" translatesAutoresizingMaskIntoConstraints="NO" id="WgN-nh-32b">
-                                                    <rect key="frame" x="0.0" y="0.0" width="356" height="387"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="415" height="387"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="WgN-nh-32b" secondAttribute="height" multiplier="415:387" id="2nO-Ek-rFl"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="WgN-nh-32b" firstAttribute="centerX" secondItem="KP0-5b-g6v" secondAttribute="centerX" id="0A4-El-UUT"/>
                                                 <constraint firstItem="WgN-nh-32b" firstAttribute="top" secondItem="KP0-5b-g6v" secondAttribute="top" id="FGW-TD-OYv"/>
-                                                <constraint firstAttribute="trailing" secondItem="WgN-nh-32b" secondAttribute="trailing" id="Z1z-F5-ec7"/>
-                                                <constraint firstItem="WgN-nh-32b" firstAttribute="leading" secondItem="KP0-5b-g6v" secondAttribute="leading" id="d80-TU-VmR"/>
-                                                <constraint firstAttribute="bottom" secondItem="WgN-nh-32b" secondAttribute="bottom" id="sWv-aq-f4o"/>
+                                                <constraint firstItem="WgN-nh-32b" firstAttribute="centerY" secondItem="KP0-5b-g6v" secondAttribute="centerY" id="g6U-fX-Jqu"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="356" height="387"/>
+                                        <size key="customSize" width="415" height="374.5"/>
                                         <connections>
                                             <outlet property="mainImageView" destination="WgN-nh-32b" id="uGT-gU-qUU"/>
                                         </connections>
@@ -126,14 +128,14 @@
                         <viewLayoutGuide key="safeArea" id="b2v-xR-Q0e"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="WMO-Pt-7A5" firstAttribute="leading" secondItem="b2v-xR-Q0e" secondAttribute="leading" constant="29" id="D9Z-cV-R24"/>
+                            <constraint firstItem="b2v-xR-Q0e" firstAttribute="trailing" secondItem="WMO-Pt-7A5" secondAttribute="trailing" id="5XL-cE-7FO"/>
+                            <constraint firstItem="WMO-Pt-7A5" firstAttribute="leading" secondItem="b2v-xR-Q0e" secondAttribute="leading" id="D9Z-cV-R24"/>
                             <constraint firstItem="b2v-xR-Q0e" firstAttribute="trailing" secondItem="zE3-Pc-mw7" secondAttribute="trailing" constant="29" id="JOF-bH-Zbo"/>
                             <constraint firstItem="WMO-Pt-7A5" firstAttribute="top" secondItem="9j6-1B-njD" secondAttribute="bottom" constant="75" id="JvT-fp-pLQ"/>
                             <constraint firstAttribute="trailing" secondItem="WVC-kD-KtM" secondAttribute="trailing" id="KVc-kT-umq"/>
                             <constraint firstItem="9j6-1B-njD" firstAttribute="top" secondItem="b2v-xR-Q0e" secondAttribute="top" constant="-6" id="Mwe-s5-8BQ"/>
                             <constraint firstItem="zE3-Pc-mw7" firstAttribute="top" secondItem="M0k-e4-Vl8" secondAttribute="bottom" constant="30" id="Yx6-Ff-gDV"/>
                             <constraint firstItem="WVC-kD-KtM" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="Zpk-gy-bqL"/>
-                            <constraint firstItem="WMO-Pt-7A5" firstAttribute="centerX" secondItem="b2v-xR-Q0e" secondAttribute="centerX" id="bjP-G4-Pr6"/>
                             <constraint firstItem="WVC-kD-KtM" firstAttribute="top" secondItem="zE3-Pc-mw7" secondAttribute="bottom" constant="30" id="fpl-hn-KBB"/>
                             <constraint firstAttribute="bottom" secondItem="WVC-kD-KtM" secondAttribute="bottom" id="kwr-DY-HVh"/>
                             <constraint firstItem="9j6-1B-njD" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="10" id="olD-oq-ceu"/>
