--- a/fieldBy/Main/Progress/Progress.storyboard
+++ b/fieldBy/Main/Progress/Progress.storyboard
@@ -81,6 +81,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Xe-Va-fJN">
                                 <rect key="frame" x="0.0" y="207" width="414" height="55"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EgR-qP-bRB">
+                                        <rect key="frame" x="20" y="0.0" width="52.5" height="55"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="신청" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbR-2J-3Rw">
                                         <rect key="frame" x="20" y="10" width="26" height="18"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
@@ -93,6 +97,10 @@
                                         <color key="textColor" name="Black"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="299-He-qSa">
+                                        <rect key="frame" x="112.5" y="0.0" width="65.5" height="55"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="진행중" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCa-bT-A3I">
                                         <rect key="frame" x="112.5" y="10" width="39" height="18"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
@@ -111,6 +119,10 @@
                                         <color key="textColor" red="0.46274509800000002" green="0.43529411759999997" blue="0.43529411759999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iaW-8P-NXK">
+                                        <rect key="frame" x="218" y="0.0" width="52.5" height="55"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0건" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2g-hS-7tH">
                                         <rect key="frame" x="248" y="10" width="22.5" height="18"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
@@ -132,16 +144,28 @@
                                     <constraint firstItem="i0m-QW-5TI" firstAttribute="leading" secondItem="gCa-bT-A3I" secondAttribute="trailing" constant="4" id="5zZ-I7-5Ig"/>
                                     <constraint firstAttribute="height" constant="55" id="6yB-56-116"/>
                                     <constraint firstItem="L2g-hS-7tH" firstAttribute="leading" secondItem="idz-Vu-CUN" secondAttribute="trailing" constant="4" id="8pD-Yu-itY"/>
+                                    <constraint firstItem="EgR-qP-bRB" firstAttribute="leading" secondItem="sbR-2J-3Rw" secondAttribute="leading" id="8uH-oB-bda"/>
+                                    <constraint firstItem="299-He-qSa" firstAttribute="trailing" secondItem="i0m-QW-5TI" secondAttribute="trailing" id="9e1-Ow-W4k"/>
                                     <constraint firstItem="R5L-v4-Bmf" firstAttribute="centerY" secondItem="sbR-2J-3Rw" secondAttribute="centerY" id="9rh-D8-sIm"/>
+                                    <constraint firstItem="299-He-qSa" firstAttribute="leading" secondItem="gCa-bT-A3I" secondAttribute="leading" id="DbH-Qk-8io"/>
+                                    <constraint firstItem="iaW-8P-NXK" firstAttribute="leading" secondItem="idz-Vu-CUN" secondAttribute="leading" id="F55-aA-sub"/>
                                     <constraint firstItem="R5L-v4-Bmf" firstAttribute="leading" secondItem="sbR-2J-3Rw" secondAttribute="trailing" constant="4" id="GT3-iY-c1b"/>
+                                    <constraint firstItem="EgR-qP-bRB" firstAttribute="top" secondItem="9Xe-Va-fJN" secondAttribute="top" id="I01-C1-l0n"/>
                                     <constraint firstItem="sbR-2J-3Rw" firstAttribute="leading" secondItem="9Xe-Va-fJN" secondAttribute="leading" constant="20" id="PXu-iv-OBF"/>
                                     <constraint firstItem="L2g-hS-7tH" firstAttribute="centerY" secondItem="idz-Vu-CUN" secondAttribute="centerY" id="QCZ-LQ-EGC"/>
+                                    <constraint firstItem="EgR-qP-bRB" firstAttribute="trailing" secondItem="R5L-v4-Bmf" secondAttribute="trailing" id="Qd3-Q4-d54"/>
                                     <constraint firstItem="gCa-bT-A3I" firstAttribute="leading" secondItem="R5L-v4-Bmf" secondAttribute="trailing" constant="40" id="QdK-iH-olE"/>
+                                    <constraint firstAttribute="bottom" secondItem="iaW-8P-NXK" secondAttribute="bottom" id="VMX-eg-S92"/>
                                     <constraint firstItem="idz-Vu-CUN" firstAttribute="leading" secondItem="i0m-QW-5TI" secondAttribute="trailing" constant="40" id="XkY-46-9qN"/>
                                     <constraint firstItem="sbR-2J-3Rw" firstAttribute="top" secondItem="9Xe-Va-fJN" secondAttribute="top" constant="10" id="Y57-9N-DDS"/>
                                     <constraint firstItem="idz-Vu-CUN" firstAttribute="centerY" secondItem="i0m-QW-5TI" secondAttribute="centerY" id="YFA-9c-W6e"/>
                                     <constraint firstItem="Z1M-mp-uRP" firstAttribute="leading" secondItem="9Xe-Va-fJN" secondAttribute="leading" id="c1e-JX-GVy"/>
                                     <constraint firstItem="i0m-QW-5TI" firstAttribute="centerY" secondItem="gCa-bT-A3I" secondAttribute="centerY" id="e9E-qD-xpt"/>
+                                    <constraint firstAttribute="bottom" secondItem="EgR-qP-bRB" secondAttribute="bottom" id="j9a-L5-F6C"/>
+                                    <constraint firstItem="299-He-qSa" firstAttribute="top" secondItem="9Xe-Va-fJN" secondAttribute="top" id="jdH-uQ-byB"/>
+                                    <constraint firstItem="iaW-8P-NXK" firstAttribute="top" secondItem="9Xe-Va-fJN" secondAttribute="top" id="lqj-y0-VbT"/>
+                                    <constraint firstItem="iaW-8P-NXK" firstAttribute="trailing" secondItem="L2g-hS-7tH" secondAttribute="trailing" id="mF6-cs-HlZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="299-He-qSa" secondAttribute="bottom" id="wV1-Fd-jVO"/>
                                     <constraint firstAttribute="bottom" secondItem="Z1M-mp-uRP" secondAttribute="bottom" id="yoR-lD-EQK"/>
                                 </constraints>
                             </view>
@@ -572,8 +596,11 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="appliedButton" destination="EgR-qP-bRB" id="61c-jG-d0l"/>
                         <outlet property="appliedLabel" destination="R5L-v4-Bmf" id="MgW-1L-lGr"/>
+                        <outlet property="doneButton" destination="iaW-8P-NXK" id="JP5-Yb-FQF"/>
                         <outlet property="doneLabel" destination="L2g-hS-7tH" id="IX0-Zb-VrW"/>
+                        <outlet property="inProgressButton" destination="299-He-qSa" id="x7u-Ey-Q49"/>
                         <outlet property="inProgressLabel" destination="i0m-QW-5TI" id="uqU-ez-ahI"/>
                         <outlet property="indicator" destination="hVL-YM-HtN" id="ovp-Va-Ihu"/>
                         <outlet property="newImageView" destination="Tf7-Br-Ctt" id="ojv-94-ikM"/>
